# fastApi-sqlalchemy-example

./: alembic.ini  docker-compose.yaml  pyproject.toml
app/: __init__.py  router.py
app/models/: __init__.py  users.py
app/repository/: postgres.py
app/routes/: __init__.py  auth.py  status.py  users.py
app/serializers/: users.py
app/services/: __init__.py  auth.py  users.py
app/services/utils/: hashing.py  jwt.py  validator.py
app/settings/: settings.py
docker/api/: Dockerfile
migrations/: env.py
migrations/versions/: f382676ea2fb_.py
settings/: settings.py
